# vision-evaluation

./: .gitignore  README.md  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: python-package.yml
test/: image_caption_gt.json  image_caption_prediction.json  test_builder.py  test_classfication.py  test_evaluators.py  test_retrieval_evaluators.py
test_vision_evaluation/: test_retrieval_evaluators.py
vision_evaluation/: __init__.py  builder.py  coco_evalcap_utils.py  coco_evalcap_wrapper.py  coco_wrapper.py  evaluators.py  prediction_filters.py  resource_tight_evaluators.py  retrieval_evaluators.py
vision_evaluation/metrics/: __init__.py  metrics.py  precision.py
vision_evaluation/pycocoevalcap/bleu/: bleu.py
vision_evaluation/pycocotools/: coco.py
vision_evaluation/states/: state.py
visionmetrics/: __init__.py  builder.py  classification.py  evaluators.py
visionmetrics/metrics/: __init__.py  accuracy.py  evaluators.py  metrics.py
visionmetrics/states/: __init__.py  all_predictions.py  coco.py  coco_wrapper.py
